@@ -1,6 +1,9 @@
 Release 0.6.2 (in development)
 ==============================
 
+* #158: Allow '..' in template names, and absolute template paths;
+  Jinja 2 by default disables both.  
+
 * When highlighting Python code, ignore extra indentation before
   trying to parse it as Python.
 
